<resources>
    <string name="app_name">YunBianDialer</string>

    <string name="contacts">Contacts</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="small">small</string>
    <string name="medium">medium</string>
    <string name="large">large</string>
    <string name="sure">Sure</string>
    <string name="cancel">Cancel</string>

    <string name="des_call_button">Call Button</string>
    <string name="des_select_all_button">Select All Contacts Button</string>
    <string name="des_export_all_button">Export All Contacts Button</string>
    <string name="import_contacts">Import Contacts</string>

    <string name="text_size_setting">Set font size</string>
    <string name="restart_title">Restart App</string>
    <string name="restart_message">To apply the new font size, app will restart.</string>
    <string name="tips">The new font will be apply at next time.</string>
    <string name="change_font_size">Change Font Size</string>
    <string name="enter_settings_item">enter_to_settings_image</string>
    <string name="permission_granted">Granted Permission</string>
    <string name="permission_denied">Denied Permission</string>
</resources>
